--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,23 +40,37 @@ services:
             KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID:-tools-provider-public}
             KEYCLOAK_PORT: ${KEYCLOAK_PORT:-8041}
 
+            # Token Exchange Configuration (RFC 8693)
+            # Used for secure identity delegation to upstream services
+            TOKEN_EXCHANGE_CLIENT_ID: ${TOKEN_EXCHANGE_CLIENT_ID:-tools-provider-token-exchange}
+            TOKEN_EXCHANGE_CLIENT_SECRET: ${TOKEN_EXCHANGE_CLIENT_SECRET:-token-exchange-secret-change-in-production}
+            TOKEN_EXCHANGE_CACHE_TTL_BUFFER: ${TOKEN_EXCHANGE_CACHE_TTL_BUFFER:-60}
+            TOKEN_EXCHANGE_TIMEOUT: ${TOKEN_EXCHANGE_TIMEOUT:-10.0}
+
+            # Circuit Breaker Configuration
+            CIRCUIT_BREAKER_FAILURE_THRESHOLD: ${CIRCUIT_BREAKER_FAILURE_THRESHOLD:-5}
+            CIRCUIT_BREAKER_RECOVERY_TIMEOUT: ${CIRCUIT_BREAKER_RECOVERY_TIMEOUT:-30.0}
+
             # Database connections
             CONNECTION_STRINGS: '{"eventstore": "esdb://eventstore:2113?tls=false", "mongo": "mongodb://root:password123@mongodb:27017"}'
             DATABASE_NAME: ${DATABASE_NAME:-tools_provider}
             CONSUMER_GROUP: ${CONSUMER_GROUP:-tools-provider-consumer-group}
 
-            # Redis Session Store (for horizontal scaling)
+            # Redis Configuration (for horizontal scaling)
+            # Database 0: Sessions (security-critical)
+            # Database 1: Cache (tool definitions, manifests, token exchange)
             REDIS_ENABLED: ${REDIS_ENABLED:-false}
             REDIS_URL: redis://redis:6379/0
+            REDIS_CACHE_URL: redis://redis:6379/1
             REDIS_KEY_PREFIX: 'session:'
 
             # Application settings
             ENABLE_CORS: 'true'
 
             # Event streaming
-            CLOUD_EVENT_SINK: http://event-player:8080/events/pub
-            CLOUD_EVENT_SOURCE: https://tools-provider.io
-            CLOUD_EVENT_TYPE_PREFIX: io.tools-provider
+            CLOUD_EVENT_SINK: ${CLOUD_EVENT_SINK:-http://event-player:8080/events/pub}
+            CLOUD_EVENT_SOURCE: https://tools-provider.system.io
+            CLOUD_EVENT_TYPE_PREFIX: io.system.tools-provider
 
             # OpenTelemetry configuration - Metrics & Traces
             OTEL_SERVICE_NAME: tools-provider
@@ -93,6 +107,8 @@ services:
             # Admin credentials (updated for Keycloak 26+)
             KC_BOOTSTRAP_ADMIN_USERNAME: ${KEYCLOAK_ADMIN_USERNAME:-admin}
             KC_BOOTSTRAP_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD:-admin}
+            # Enable Token Exchange feature (RFC 8693)
+            KC_FEATURES: token-exchange,admin-fine-grained-authz
             # Development settings (no external DB, uses H2)
             KC_DB: dev-file
             KC_HTTP_ENABLED: 'true'
@@ -274,24 +290,133 @@ services:
             - tools-provider-net
 
     # 🎨 UI Builder (Parcel Watch Mode)
-    # Automatically rebuilds UI assets on file changes
+    # Automatically rebuilds UI assets for both tools-provider and agent-host
     ui-builder:
         container_name: tools-provider-ui-builder
         image: node:20-alpine
-        working_dir: /app/src/ui
-        command: npm run watch
+        working_dir: /workspace
         volumes:
-            - ./:/app
-            - /app/src/ui/node_modules # Anonymous volume for node_modules
+            - ./:/workspace
+            - /workspace/src/ui/node_modules
+            - /workspace/agent-host/ui/node_modules
         networks:
             - tools-provider-net
         environment:
             NODE_ENV: development
+            AGENT_HOST_APP_NAME: ${AGENT_HOST_APP_NAME:-Agent Host}
         entrypoint: >
             sh -c "
-            npm install &&
-            npm run watch
+            set -e &&
+            echo '🎨 Installing dependencies for tools-provider UI...' &&
+            cd /workspace/src/ui && npm install &&
+            echo '🎨 Building tools-provider UI...' &&
+            npm run build || true &&
+            echo '🎨 Installing dependencies for agent-host UI...' &&
+            cd /workspace/agent-host/ui && npm install &&
+            echo '🎨 Building agent-host UI...' &&
+            npm run build || true &&
+            echo '🎨 Starting watch mode for both UIs...' &&
+            (cd /workspace/src/ui && npm run watch) &
+            (cd /workspace/agent-host/ui && npm run watch) &
+            wait
             "
+
+    # 🤖 Ollama (Local LLM Server)
+    # Provides LLM inference for Agent Host
+    # API: http://localhost:11434
+    # ollama:
+    #   container_name: tools-provider-ollama
+    #   image: ollama/ollama:latest
+    #   ports:
+    #     - "${OLLAMA_PORT:-11434}:11434"
+    #   volumes:
+    #     - ollama_data:/root/.ollama
+    #   networks:
+    #     - tools-provider-net
+    #   # Pull the model on startup (optional - can also be done manually)
+    #   # entrypoint: >
+    #   #   sh -c "
+    #   #   ollama serve &
+    #   #   sleep 5 &&
+    #   #   ollama pull llama3.2:3b &&
+    #   #   wait
+    #   #   "
+
+    # 🤖 Agent Host (BFF + Chat Interface)
+    # http://localhost:${AGENT_HOST_PORT:-8050}
+    # Chat interface that connects to Tools Provider
+    agent-host:
+        container_name: tools-provider-agent-host
+        build:
+            context: ./agent-host
+            dockerfile: Dockerfile
+        command: ['sh', '-c', 'cd /app/src && uvicorn main:create_app --factory --host 0.0.0.0 --port 8080 --reload --reload-dir /app/src']
+        ports:
+            - '${AGENT_HOST_PORT:-8050}:8080'
+        environment:
+            # Application settings
+            AGENT_HOST_LOG_LEVEL: ${AGENT_HOST_LOG_LEVEL:-DEBUG}
+            AGENT_HOST_APP_URL: ${AGENT_HOST_APP_URL:-http://localhost:8050}
+            AGENT_HOST_ENVIRONMENT: development
+            PYTHONPATH: /app/src
+
+            # Keycloak Configuration
+            AGENT_HOST_KEYCLOAK_URL: ${KEYCLOAK_URL:-http://localhost:8041}
+            AGENT_HOST_KEYCLOAK_URL_INTERNAL: ${KEYCLOAK_URL_INTERNAL:-http://keycloak:8080}
+            AGENT_HOST_KEYCLOAK_REALM: ${KEYCLOAK_REALM:-tools-provider}
+            AGENT_HOST_KEYCLOAK_CLIENT_ID: agent-host
+
+            # CloudEvent Configuration
+            AGENT_HOST_CLOUD_EVENT_SINK: ${CLOUD_EVENT_SINK:-http://event-player:8080/events/pub}
+            AGENT_HOST_CLOUD_EVENT_SOURCE: http://agent-host.system.io
+            AGENT_HOST_CLOUD_EVENT_TYPE_PREFIX: io.system.agent-host
+
+            # Redis Configuration (Database 2)
+            AGENT_HOST_REDIS_URL: redis://redis:6379/2
+            AGENT_HOST_REDIS_ENABLED: 'true'
+
+            # Tools Provider Configuration
+            AGENT_HOST_TOOLS_PROVIDER_URL: http://app:8080
+            AGENT_HOST_TOOLS_PROVIDER_TIMEOUT: 30.0
+
+            # Database connections (same infrastructure as tools-provider)
+            CONNECTION_STRINGS: '{"mongo": "mongodb://root:password123@mongodb:27017"}'
+            AGENT_HOST_DATABASE_NAME: ${AGENT_HOST_DATABASE_NAME:-agent_host}
+            AGENT_HOST_CONSUMER_GROUP: ${AGENT_HOST_CONSUMER_GROUP:-agent-host-consumer-group}
+
+            # Ollama Configuration
+            # Use AGENT_HOST_OLLAMA_URL=http://host.docker.internal:11434 for local Ollama on macOS/Windows
+            # Use AGENT_HOST_OLLAMA_URL=http://ollama:11434 for Docker Ollama
+            AGENT_HOST_OLLAMA_URL: ${AGENT_HOST_OLLAMA_URL:-http://host.docker.internal:11434}
+            AGENT_HOST_OLLAMA_MODEL: ${AGENT_HOST_OLLAMA_MODEL:-llama3.2:3b}
+            AGENT_HOST_OLLAMA_TIMEOUT: ${AGENT_HOST_OLLAMA_TIMEOUT:-120.0}
+            AGENT_HOST_OLLAMA_STREAM: ${AGENT_HOST_OLLAMA_STREAM:-true}
+            AGENT_HOST_OLLAMA_TEMPERATURE: ${AGENT_HOST_OLLAMA_TEMPERATURE:-0.7}
+            AGENT_HOST_OLLAMA_TOP_P: ${AGENT_HOST_OLLAMA_TOP_P:-0.9}
+            AGENT_HOST_OLLAMA_NUM_CTX: ${AGENT_HOST_OLLAMA_NUM_CTX:-8192}
+
+            # Agent Configuration
+            AGENT_HOST_AGENT_NAME: ${AGENT_HOST_AGENT_NAME:-assistant}
+            AGENT_HOST_AGENT_MAX_ITERATIONS: ${AGENT_HOST_AGENT_MAX_ITERATIONS:-10}
+            AGENT_HOST_AGENT_MAX_TOOL_CALLS_PER_ITERATION: ${AGENT_HOST_AGENT_MAX_TOOL_CALLS_PER_ITERATION:-5}
+            AGENT_HOST_AGENT_TIMEOUT_SECONDS: ${AGENT_HOST_AGENT_TIMEOUT_SECONDS:-300.0}
+            AGENT_HOST_SYSTEM_PROMPT: ${AGENT_HOST_SYSTEM_PROMPT:-"You are a helpful AI assistant with access to various tools."}
+        volumes:
+            - ./agent-host:/app
+        networks:
+            - tools-provider-net
+        depends_on:
+            - app
+            - redis
+            - keycloak
+            - eventstore
+            - mongodb
+            - event-player
+            - ui-builder
+        # Note: 'ollama' dependency removed - use local Ollama by default
+        # Uncomment below to use Docker Ollama instead:
+        # depends_on:
+        #   - ollama
 
 networks:
     tools-provider-net:
@@ -301,3 +426,4 @@ volumes:
     eventstore_data:
     mongo_data:
     keycloak_data:
+    ollama_data:
