--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = ">=3.11,<4.0"
 neuroglia-python = { version = "^0.7.5", extras = ["mongodb", "eventstore"] }
 redis = "^7.1.0"
 python-keycloak = "^4.0.0"
+jinja2 = "^3.1.0"
+jsonschema = "^4.25.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
