feat: functional tools calling
Signed-off-by: Bruno van de Werve <bvandewe@gmail.com>

--- a/src/ui/.parcelrc
+++ b/src/ui/.parcelrc
@@ -8,5 +8,9 @@
     },
     "optimizers": {
         "*.html": []
-    }
+    },
+    "reporters": [
+        "...",
+        "parcel-reporter-static-files-copy"
+    ]
 }
