feat(keycloak): add audience mapper and verification config
- Add oidc-audience-mapper to pizzeria-backend client
- Pizzeria supports VERIFY_AUDIENCE and EXPECTED_AUDIENCE env
- Docker compose reformatted (whitespace only)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -365,6 +365,9 @@ services:
             KEYCLOAK_URL: ${KEYCLOAK_URL:-http://localhost:8041}
             KEYCLOAK_URL_INTERNAL: http://keycloak:8080
             KEYCLOAK_REALM: ${KEYCLOAK_REALM:-tools-provider}
+            # Audience verification (set to false to disable for testing)
+            VERIFY_AUDIENCE: ${PIZZERIA_VERIFY_AUDIENCE:-true}
+            EXPECTED_AUDIENCE: ${PIZZERIA_EXPECTED_AUDIENCE:-pizzeria-backend}
         volumes:
             - ./upstream-sample:/app
         networks:
