fix(keycloak): add KC_HOSTNAME_PORT for correct issuer URL
- Token issuer was http://localhost:8080 (internal) instead of :8041
- Caused issuer mismatch errors on token validation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,7 @@ services:
             KC_DB: dev-file
             KC_HTTP_ENABLED: 'true'
             KC_HOSTNAME: localhost
+            KC_HOSTNAME_PORT: ${KEYCLOAK_PORT:-8041}
             KC_HOSTNAME_STRICT: 'false'
             KC_PROXY_HEADERS: xforwarded
             KC_HEALTH_ENABLED: 'true'
