feat(ui): add bootstrap footer with GitHub, docs links, and version
- Create footer component with GitHub repo link (neuroglia-io/python-framework)
- Add documentation site link (bvandewe.github.io/tools-provider)
- Display copyright notice and dynamic app version
- Fetch version from /api/health endpoint on page load
- Update body to use flex layout for sticky footer positioning

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             LOG_LEVEL: DEBUG
             PYTHONPATH: '/app/src'
             APP_URL: ${APP_URL:-http://localhost:8040}
+            APP_VERSION: ${APP_TAG:-latest}
 
             # JWT Configuration (DEPRECATED - Use Keycloak instead)
             JWT_SECRET_KEY: ${JWT_SECRET_KEY:-change-me-in-production}
