feat(agent-host): add admin settings modal with MongoDB persistence
- Create AppSettingsDto with LLM, Agent, UI subsections for MongoDB storage
- Add AppSettingsService for settings CRUD operations with caching
- Create SettingsController with GET/PUT/DELETE endpoints (admin only)
- Add settings modal UI with tabs for LLM, Agent, UI configuration
- Create settings.js service for modal management and API calls
- Add gear icon in header (visible only for admin users)
- Update config controller to use stored settings with env var fallback
- LLM tab: Ollama URL, model selection, timeout, temperature, top_p, context window
- Agent tab: name, timeout, max iterations, tool calls, retries, system prompt
- UI tab: welcome message, rate limiting, app tag, repo URL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -245,7 +245,7 @@ services:
 
             # Authentication & Authorization
             auth_required: 'true'
-            auth_audience: events-player-web
+            auth_audience: tools-provider-token-exchange
             auth_algorithm: RS256
 
             # Role Mapping Configuration
