--- a/upstream-sample/pyproject.toml
+++ b/upstream-sample/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "httpx>=0.27.0",
     "pydantic>=2.9.0",
     "pydantic-settings>=2.5.0",
+    "motor>=3.6.0",
 ]
 
 [project.optional-dependencies]
