--- a/src/upstream-sample/pyproject.toml
+++ b/src/upstream-sample/pyproject.toml
@@ -38,3 +38,8 @@ target-version = "py312"
 [tool.ruff.lint]
 select = ["E", "F", "I", "W"]
 ignore = ["E501"]
+
+[tool.ruff.lint.isort]
+force-single-line = false
+combine-as-imports = true
+known-first-party = ["app"]
