docs: add comprehensive Proactive Agent specification
- Create docs/specs/proactive-agent-specification.md (~800 lines)
  - Session aggregate (composition wrapper around Conversation)
  - Control modes: reactive vs proactive
  - Client Tool registry with 12+ UI widgets
  - Agent loop suspension/resumption for user interactions
  - API contracts for Session endpoints
  - 5-phase implementation plan
- Update mkdocs.yml navigation (Agent Host section)
- Update CHANGELOG.md with new spec details
- Remove outdated proactive-agent-draft.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - Agent Host:
           - Low-Level Design: specs/agent-host-lld.md
           - Implementation Plan: specs/agent-host-plan.md
+          - Proactive Agent: specs/proactive-agent-specification.md
       - Integration: specs/integration.md
   - Architecture:
       - Overview: architecture/overview.md
