docs: reorganize proactive agent spec and add ui architecture
- Rename proactive-agent-specification.md to proactive-agent.md
- Add docs/architecture/ui-architecture.md to mkdocs navigation
- Add PDF exclusion to .gitignore (docs/**/*.pdf)
- Add PDF exclusion to VS Code files.exclude settings
- Update mkdocs.yml navigation for both documents

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,10 +26,11 @@ nav:
       - Agent Host:
           - Low-Level Design: specs/agent-host-lld.md
           - Implementation Plan: specs/agent-host-plan.md
-          - Proactive Agent: specs/proactive-agent-specification.md
+          - Proactive Agent: specs/proactive-agent.md
       - Integration: specs/integration.md
   - Architecture:
       - Overview: architecture/overview.md
+      - UI Architecture: architecture/ui-architecture.md
       - System Integration: architecture/system-integration.md
       - CQRS Pattern: architecture/cqrs-pattern.md
       - Event Sourcing: architecture/event-sourcing.md
