docs: add Proactive Agent roadmap and implementation plan
Executive Roadmap (proactive-agent-roadmap.md):
- 9-11 week timeline across 3 phases
- MVP: Multiple Choice, Free Text, Code Editor widgets
- Business value, success metrics, resource requirements
- Phase 4+ future scope (complex widgets)

Implementation Plan (proactive-agent-implementation-plan.md):
- 112 detailed tasks with size estimates
- Week-by-week breakdown
- Acceptance criteria per task
- Dependencies graph, risk register
- Definition of Done checklist

MkDocs: Added Roadmap section to navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ nav:
           - Overview: getting-started.md
           - Installation: getting-started/installation.md
           - Running the App: getting-started/running-the-app.md
+  - Roadmap:
+      - Executive Roadmap: roadmap/proactive-agent-roadmap.md
+      - Implementation Plan: roadmap/proactive-agent-implementation-plan.md
   - Specs:
       - Overview: specs/tools-provider.md
       - Design Review: specs/design-review.md
