--- a/src/agent-host/pyproject.toml
+++ b/src/agent-host/pyproject.toml
@@ -14,6 +14,7 @@ itsdangerous = "^2.2.0"
 pyjwt = { version = "^2.8.0", extras = ["crypto"] }
 httpx = "^0.27.0"
 multipledispatch = "^1.0.0"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
