feat(tools-provider): add file-based secret management
- Add SourceSecretsStore for YAML-based credential storage
- Gitignore secrets/sources.yaml (actual credentials)
- Add docs/architecture/secret-management.md

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 static/
 docs/**/*.pdf
 
+# Secrets - NEVER commit actual credentials
+**/secrets/sources.yaml
+!**/secrets/sources.yaml.example
+
 # Python
 __pycache__/
 *.py[cod]
