--- a/src/tools-provider/pyproject.toml
+++ b/src/tools-provider/pyproject.toml
@@ -12,6 +12,8 @@ redis = "^7.1.0"
 python-keycloak = "^4.0.0"
 jinja2 = "^3.1.0"
 jsonschema = "^4.25.1"
+restrictedpython = {version = "^8.1", python = ">=3.12,<3.15"}
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
