docs: update overview, features, and navigation for MCP
- Add MCP sources to architecture diagrams
- Update features with MCP integration highlights
- Add MCP Tools to mkdocs navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
       - Dependency Injection: architecture/dependency-injection.md
       - Read Model Reconciliation: architecture/read-model-reconciliation.md
       - MCP Protocol Decision: architecture/mcp-protocol-decision.md
+      - MCP Tools: architecture/mcp-tools.md
   - Implementation:
       - Overview: implementation/overview.md
       - Source Registration: implementation/source-registration.md
